<resources>
    <string name="app_name">bus_lnmiit</string>
    <string name="login_message">LNMIIT BUS</string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Enter Bus</item>
        <item>View Buses</item>
        <item>Logout</item>
    </string-array>

    <string name="namelabel">"Bus Id: "</string>
    <string name="driverlabel">"Bus Driver: "</string>
    <string name="fromlabel">"From: "</string>
    <string name="tolabel">"To: "</string>

    <string name="namelabel1">"Route: "</string>
    <string name="driverlabel1">"Time: "</string>
    <string name="fromlabel1">"Seats Total: "</string>
    <string name="tolabel1">"Seats Booked: "</string>

    <string name="namelabel2">"Booked route: "</string>
    <string name="driverlabel2">"Date Booked: "</string>

    <string name="admin_bus_submit">Submit</string>
    <string name="admin_bus_cancel">Cancel</string>
    <string name="no_not">No Notification</string>
    <string name="admin_bus_header">Enter Bus Details</string>
    <string name="admin_bus_title">Bus ID</string>
    <string name="admin_driver">Bus Driver</string>
    <string name="admin_route_from">From</string>
    <string name="admin_route_to">To</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navi_draw">Navi_draw</string>
    <string name="title_activity_user">user</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
