<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namelabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/bus_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/namelabel"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <TextView
        android:id="@+id/driverlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driverlabel"
        android:textSize="25sp"
        android:layout_below="@+id/namelabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/bus_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/driverlabel"
        android:layout_below="@+id/namelabel"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <TextView
        android:id="@+id/fromlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromlabel"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/driverlabel" />

    <TextView
        android:id="@+id/route_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/fromlabel"
        android:layout_below="@+id/driverlabel"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <TextView
        android:id="@+id/tolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tolabel"
        android:textSize="25sp"
        android:layout_below="@+id/fromlabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/route_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tolabel"
        android:layout_below="@+id/fromlabel"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

</RelativeLayout>