<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/namelabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namelabel1"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/bus_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/namelabel1"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <TextView
        android:id="@+id/driverlabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driverlabel1"
        android:textSize="25sp"
        android:layout_below="@+id/namelabel1"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/driverlabel1"
        android:layout_below="@+id/namelabel1"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <TextView
        android:id="@+id/fromlabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromlabel1"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/driverlabel1" />

    <TextView
        android:id="@+id/seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/fromlabel1"
        android:layout_below="@+id/driverlabel1"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <TextView
        android:id="@+id/tolabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tolabel1"
        android:textSize="25sp"
        android:layout_below="@+id/fromlabel1"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/booked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tolabel1"
        android:layout_below="@+id/fromlabel1"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Book"
        android:id="@+id/user_book"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>